manifest/ingress/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: billing-cip-svc
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: billing-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata: 
  name: sub-cip-svc
spec:
  ports:
  - port: 8001
    targetPort: 8001
    protocol: TCP
  selector:
    app: subscription-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata: 
  name: user-cip-svc
spec:
  ports:
  - port: 8002
    targetPort: 8002
    protocol: TCP
  selector:
    app: user-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata: 
  name: postgresql
  labels:
    app: postgresql
    app.kubernetes.io/name: postgresql
spec:
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  clusterIP: None
  selector:
    app: postgresql

---
# Client service for connecting to any MySQL instance for reads.
# For writes, you must instead connect to the primary: mysql-0.mysql.
apiVersion: v1
kind: Service
metadata:
  name: postgresql-read
  labels:
    app: postgresql
    app.kubernetes.io/name: postgresql
    readonly: "true"
spec:
  ports:
  - name:
    port: 3306
  selector:
    app: postgresql
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: microservices-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: apps.thunderclouds.store
    http:
      paths:
      - backend:
          service:
            name: billing-cip-svc
            port:
              number: 8000
        path: /billing
        pathType: Prefix
      - backend:
          service:
            name: sub-cip-svc
            port:
              number: 8001
        path: /subscription
        pathType: Prefix
      - backend:
          service:
            name: user-cip-svc
            port:
              number: 8002
        path: /user
        pathType: Prefix
